[gd_scene load_steps=8 format=3 uid="uid://dmna7dgq05p8t"]

[ext_resource type="Texture2D" uid="uid://bjgca3kn71p8b" path="res://assets/session/gameover.png" id="1_0e5d8"]
[ext_resource type="Script" uid="uid://dpv5heakqdllj" path="res://scripts/game_over/game_over.gd" id="1_rveq7"]

[sub_resource type="Animation" id="Animation_rveq7"]
resource_name = "RESET"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture_rect:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture_rect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("v_box_container/container_session:visible")
tracks/4/interp = 0
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("v_box_container/container_money:visible")
tracks/5/interp = 0
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("v_box_container/container_time:visible")
tracks/6/interp = 0
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("v_box_container/container_bust:visible")
tracks/7/interp = 0
tracks/7/loop_wrap = false
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("v_box_container/container_cards:visible")
tracks/8/interp = 0
tracks/8/loop_wrap = false
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("v_box_container/button:visible")
tracks/9/interp = 0
tracks/9/loop_wrap = false
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5sra1"]
resource_name = "start"
length = 5.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture_rect:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture_rect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("v_box_container/container_session:visible")
tracks/4/interp = 0
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 2, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("v_box_container/container_money:visible")
tracks/5/interp = 0
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("v_box_container/container_time:visible")
tracks/6/interp = 0
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("v_box_container/container_bust:visible")
tracks/7/interp = 0
tracks/7/loop_wrap = false
tracks/7/keys = {
"times": PackedFloat32Array(0, 3.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("v_box_container/container_cards:visible")
tracks/8/interp = 0
tracks/8/loop_wrap = false
tracks/8/keys = {
"times": PackedFloat32Array(0, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("v_box_container/button:visible")
tracks/9/interp = 0
tracks/9/loop_wrap = false
tracks/9/keys = {
"times": PackedFloat32Array(0, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [false, true, true]
}

[sub_resource type="Animation" id="Animation_gb66y"]
resource_name = "stop"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("color_rect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture_rect:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture_rect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 0
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("v_box_container/container_session:visible")
tracks/4/interp = 0
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("v_box_container/container_money:visible")
tracks/5/interp = 0
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("v_box_container/container_time:visible")
tracks/6/interp = 0
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("v_box_container/container_bust:visible")
tracks/7/interp = 0
tracks/7/loop_wrap = false
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("v_box_container/container_cards:visible")
tracks/8/interp = 0
tracks/8/loop_wrap = false
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("v_box_container/button:visible")
tracks/9/interp = 0
tracks/9/loop_wrap = false
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5sra1"]
_data = {
&"RESET": SubResource("Animation_rveq7"),
&"start": SubResource("Animation_5sra1"),
&"stop": SubResource("Animation_gb66y")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gb66y"]

[node name="game_over" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rveq7")

[node name="color_rect" type="ColorRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75)

[node name="texture_rect" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -64.0
offset_top = 153.155
offset_right = 64.0
offset_bottom = 409.155
grow_horizontal = 2
texture = ExtResource("1_0e5d8")

[node name="v_box_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.45
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="container_session" type="HBoxContainer" parent="v_box_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="label_name" type="Label" parent="v_box_container/container_session"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Session Number:"
horizontal_alignment = 2

[node name="label_data" type="Label" parent="v_box_container/container_session"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "03231"

[node name="container_money" type="HBoxContainer" parent="v_box_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="label_name" type="Label" parent="v_box_container/container_money"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Money Earned:"
horizontal_alignment = 2

[node name="label_data" type="Label" parent="v_box_container/container_money"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "03231"

[node name="container_time" type="HBoxContainer" parent="v_box_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="label_name" type="Label" parent="v_box_container/container_time"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Time Wasted:"
horizontal_alignment = 2

[node name="label_data" type="Label" parent="v_box_container/container_time"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "03231"

[node name="container_bust" type="HBoxContainer" parent="v_box_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="label_name" type="Label" parent="v_box_container/container_bust"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Bust Accumulated:"
horizontal_alignment = 2

[node name="label_data" type="Label" parent="v_box_container/container_bust"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "03231"

[node name="container_cards" type="HBoxContainer" parent="v_box_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="label_name" type="Label" parent="v_box_container/container_cards"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Cards Collected:"
horizontal_alignment = 2

[node name="label_data" type="Label" parent="v_box_container/container_cards"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "03231"

[node name="button" type="Button" parent="v_box_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 48
text = "Return to Menu"

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5sra1"),
&"game_over": SubResource("AnimationLibrary_gb66y")
}
